apps/homepage-wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: homepage-wordpress
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca-issuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - homepage.makerspace.local
      secretName: wordpress-tls
  rules:
    - host: homepage.makerspace.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
