apps/homepage-wordpress/wordpress-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ts
  namespace: homepage-wordpress
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: wordpress
      port:
        number: 80
  tls:
    - hosts:
        # → homepage.zebra-alewife.ts.net
        - homepage
