apps/homepage-wordpress/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homepage-wordpress-ingress
  namespace: homepage-wordpress
spec:
  endpointSelector: {}
  ingress:
    # Allow all intra-namespace traffic (wordpress <-> mariadb)
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: homepage-wordpress
    # Allow mariadb-operator to reach the DB to bootstrap/manage it (3306)
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mariadb-operator
      toPorts:
        - ports:
            - port: "3306"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
